--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,16 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.3
-loader_version=0.16.10
+minecraft_version=1.21.4
+yarn_mappings=1.21.4+build.8
+loader_version=0.17.2
 loom_version=1.11-SNAPSHOT
+
+# Fabric API
+fabric_version=0.119.4+1.21.4
+
 # Mod Properties
-mod_version=1.0.2
+mod_version=1.0.3
 maven_group=dev.zenithknight.mcmods
 archives_base_name=dammitzeus
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.116.5+1.21.1
